Proyecto2/kubernetes/k8s/consumergodeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: p2-so1
  name: kafka-consumer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
      - name: consumer
        image: kritianwhite/p2_go_consumer # Reemplaza con la imagen de tu consumidor Go
