Proyecto2/kubernetes/k8s/create-kafka-topic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-topic-creator
  namespace: p2-so1
spec:
  containers:
  - name: kafka-client
    image: confluentinc/cp-kafka:latest
    command:
    - sh
    - -c
    - "exec kafka-topics --bootstrap-server 10.51.92.185:9092 --create --topic topic-votos --partitions 1 --replication-factor 1"
  restartPolicy: Never
