Proyecto2/kubernetes/k8s/rustdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentrust
  namespace: p2-so1
spec:
  selector:
    matchLabels:
      role: deploymentrust
  replicas: 1
  template:
    metadata:
      labels:
        role: deploymentrust
    spec:
      containers:
      - name: containclientrust
        image: kritianwhite/p2_rust_client
        ports:
        - containerPort: 5003
      - name: containserverrust
        image: kritianwhite/p2_rust_producer
        ports:
        - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: service-rust
spec:
  ports:
  - name: rust-client
    port: 5003
    targetPort: 5003
  selector:
    role: deploymentrust
  type: LoadBalancer
